# sysadmin

./: README.md
sysadmin-config/: Cargo.toml
sysadmin-config/src/: application.rs  config.rs  database.rs  jwt.rs  main.rs  settings.rs  settings.yaml
sysadmin-contract/: Cargo.toml
sysadmin-contract/src/: basemodel.rs  casbinrule.rs  datapermission.rs  dbcolumns.rs  dbtables.rs  dept.rs  dictdata.rs  dicttype.rs  login.rs  loginlog.rs  main.rs  menu.rs  operlog.rs  post.rs  role.rs  roledept.rs  rolemenu.rs  syscolumns.rs  sysconfig.rs  systables.rs  sysuser.rs
sysadmin-dao/: Cargo.toml
sysadmin-dao/src/: main.rs  mysqldao.rs
sysadmin-middleware/: Cargo.toml
sysadmin-middleware/src/: lib.rs
sysadmin-services/: .gitignore  Cargo.toml
sysadmin-services/src/: endpoints.rs  main.rs
