[package]
name = "sysadmin-services"
version = "0.1.0"
authors = ["imac"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.0"
serde = { version = "1.0.106" ,features = ["derive"] }
serde_json = "1.0.51"
env_logger = "0.7.1"
log = "0.4.8"